yo dawg i herd you like tests

--- a/PrivacyScriptsTests/App.config
+++ b/PrivacyScriptsTests/App.config
@@ -4,10 +4,13 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
 	</startup>
 	<appSettings>
-		<add key="environment" value="Development"/>
-		<add key="protocol" value="https:"/>
-		<add key="cdn" value="dev.betrad.com"/>
-		<add key="companyId" value="242"/>
-		<add key="domain" value="brandon.willoughby.com/us/"/>
+		<!-- TraffickerConfig -->
+		<add key="domain" value="tests.privacyscripts.com"/>
+
+		<!-- SettingsConfig -->
+		<add key="consentTypeId" value="1"/>
+
+		<!-- ThemeConfig -->
+		<add key="bannerStyle" value=""/>
 	</appSettings>
 </configuration>
